--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Crypto Risk Control
-description: 
+description: Scientifically constructed cryptocurrency portfolio indices
 sourcecode: "https://github.com/forever-am/cryptoriskcontrol-site"
 
 permalink: blog/:year/:month/:day/:title
