--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,18 +1,11 @@
-- title: "Research"
-  href: "/research/"
+- title: "Fund index"
+  href: "/"
 
-- title: "CV"
-  href: "/cv/"
+- title: "Methodology"
+  href: "/methodology/"
 
-- title: "Misc"
-  href: "/misc/"
+- title: "About us"
+  href: "/about-us/"
 
-- title: "Submenu"
-  subcategories:
-    - subtitle: "Item 1"
-      subhref: "/misc/item-1/"
-    - subtitle: "Item 2"
-      subhref: "/misc/item-2/"
-
-- title: "Blog"
-  href: "/blog/"
+- title: "Feeds"
+  href: "/feeds/"
