--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,4 +1,4 @@
-- title: "Fund index"
+- title: "CRCI3 index"
   href: "/"
 
 - title: "Methodology"
@@ -6,6 +6,3 @@
 
 - title: "About us"
   href: "/about-us/"
-
-- title: "Feeds"
-  href: "/feeds/"
