--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Crypto Risk Control
-description: Peace of Mind Solutions for Crypto Investors
+description: Invest with Peace of Mind
 sourcecode: "https://github.com/forever-am/cryptoriskcontrol-site"
 disclaimer: "Copyright, Forever Investment Solutions, 2018. Forever Investment
 Solutions does not guarantee the
