--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Crypto Risk Control
-description: Helping Crypto Investors Sleep Better
+description: Low Drawdown Portfolio Indices for Crypto Investors
 sourcecode: "https://github.com/forever-am/cryptoriskcontrol-site"
 disclaimer: "Copyright, Forever Investment Solutions, 2018. Forever Investment
 Solutions does not guarantee the
